# turingpareto

./: .gitignore  Cargo.toml  LICENSE.md  README.md  mprocs.yaml  rustfmt.toml
src/: csv.rs  graph.rs  list.rs  main.rs  pareto.rs  types.rs
src/graph/: gif3d.rs  html2d.rs  html3d.rs  mod.rs  png2d.rs  png3d.rs
